--- a/style.css
+++ b/style.css
@@ -35,10 +35,13 @@ header {
 	width: 100%;
 	height: 75px;
 	margin: auto;
-	background-color: black;
-	opacity: 0.75;
 	position: absolute;
 	display: flex;
+	z-index: 9999;
+}
+
+header .logo-container {
+	margin: auto auto auto 0;
 }
 
 header .logo-container h1 {
@@ -49,29 +52,32 @@ header .logo-container h1 {
 nav {
 	display: flex;
 	width: calc(100vw - 2 * 175px);
-	background-color: red;
 	margin: auto;
+	height: 100%;
 }
 
 .nav-links {
 	display: flex;
-	font-size: 20px;
-	width: 50%;
-	margin: auto;
-	flex: 1;
-	background-color: blue;
-	right: 0;
+	justify-content: flex-end;
+	font-size: 18px;
+	width: 75%;
+	height: 100%;
 }
 
 .nav-links li {
 	list-style: none;
-	margin: 0 15px;
+	margin: auto 0 auto 20px;
 }
 
 .nav-links a {
 	color: white;
 	text-decoration: none;
 	letter-spacing: 1.5px;
+	transition: 0.25s;
+}
+
+.nav-links li:hover a {
+	color: gray;
 }
 /*#endregion*/
 
@@ -79,12 +85,54 @@ nav {
 .home-page-banner {
 	width: 100%;
 	height: 100vh;
+	position: relative;
 }
 
 .home-page-banner img {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	margin: 0px;
+	padding: 0px;
+	filter: brightness(50%);
+}
+
+.home-page-banner-content {
+	text-align: center;
+	position: absolute;
+	width: 100%;
+	height: 500px;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
+
+.home-page-banner-content h1 {
+	font-size: 60px;
+	display: block;
+	font-family: HindBold;
+}
+
+.home-page-banner-content p {
+	display: block;
+	font-size: 24px;
+	font-family: HindLight;
+}
+
+.home-page-banner-button {
+	display: flex;
+	justify-content: center;
+}
+
+.home-page-banner-button button {
+	width: 300px;
+	height: 125px;
+	font-size: 36px;
+	position: absolute;
+	top: 250px;
+	border: 0;
+	background-color: black;
+	color: white;
 }
 /*#endregion*/
 
