--- a/style.css
+++ b/style.css
@@ -211,16 +211,16 @@ nav {
     font-size: 32px;
     position: absolute;
     top: 350px;
-    border: 5px solid black;
-    background-color: black;
-    color: white;
+    border: 5px solid white;
+    background-color: white;
+    color: black;
     cursor: pointer;
     transition: 0.25s;
 }
 
 .home-page-banner-button:hover button {
     background-color: transparent;
-    color: black;
+    color: White;
 }
 /*#endregion*/
 
@@ -307,6 +307,7 @@ nav {
     margin: 0 auto;
     position: absolute;
     transition: 0.25s;
+    cursor: pointer;
 }
 
 #learn button {
