--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ nav {
     width: 250px;
     height: 100px;
     font-size: 32px;
+    font-family: HindSemiBold;
     position: absolute;
     top: 350px;
     border: 5px solid white;
