--- a/style.css
+++ b/style.css
@@ -44,6 +44,13 @@ header {
     z-index: 9999;
 }
 
+nav {
+    display: flex;
+    width: calc(100vw - 2 * 15px);
+    margin: auto;
+    height: 100%;
+}
+
 header .logo-container {
     margin: auto auto auto 0;
     z-index: 9999;
@@ -52,13 +59,6 @@ header .logo-container {
 header .logo-container h1 {
     font-size: 24px;
     color: white;
-}
-
-nav {
-    display: flex;
-    width: calc(100vw - 2 * 15px);
-    margin: auto;
-    height: 100%;
 }
 
 .nav-links {
@@ -208,7 +208,7 @@ nav {
 .home-page-banner-button button {
     width: 250px;
     height: 100px;
-    font-size: 32px;
+    font-size: 36px;
     font-family: HindSemiBold;
     position: absolute;
     top: 350px;
@@ -289,12 +289,12 @@ nav {
 }
 
 .main-content-container .main-content-button button {
-    width: 175px;
+    width: 225px;
     height: 75px;
     top: 325px;
-    font-size: 18px;
+    font-size: 24px;
     border: none;
-    font-family: HindLight;
+    font-family: HindRegular;
     margin: 0 auto;
     position: absolute;
     transition: 0.25s;
@@ -380,10 +380,10 @@ nav {
     }
 
     .main-content-container .main-content-button button {
-        width: 225px;
+        width: 250px;
         height: 100px;
         top: 450px;
-        font-size: 24px;
+        font-size: 28px;
     }
 
     .main-content-container .main-content-image {
@@ -445,7 +445,7 @@ nav {
     .home-page-banner-button button {
         width: 300px;
         height: 125px;
-        font-size: 36px;
+        font-size: 42px;
     }
 
     .main-content-container {
@@ -464,16 +464,16 @@ nav {
     }
 
     .main-content-container .main-content-button button {
-        width: 225px;
+        width: 275px;
         height: 100px;
         bottom: 750px;
-        font-size: 24px;
+        font-size: 30px;
     }
 
     .main-content-container .main-content-header {
         display: block;
         padding-top: 37.5px;
-        width: 100%;
+        width: 75%;
         background-color: blue;
     }
 
@@ -481,7 +481,7 @@ nav {
     #learn h2,
     #web-design h1,
     #web-design h2 {
-        font-size: 28px;
+        font-size: 26px;
         width: 100%;
     }
 
@@ -521,7 +521,7 @@ nav {
     }
 
     #web-design .main-content-button {
-        right: 225px;
+        right: 275px;
         margin-right: 15%;
     }
 
@@ -552,7 +552,6 @@ nav {
     }
 
     #web-design .main-content-button {
-        right: 225px;
         margin-right: 25%;
     }
 }
