--- a/style.css
+++ b/style.css
@@ -362,12 +362,15 @@ header .logo-container h1 {
 }
 
 .project {
-    width: 250px;
-    margin: 0 auto;
+    width: 100%;
+    height: 375px;
+    margin: 0 auto 15px auto;
 }
 
 .project img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 /*#endregion*/
 
