--- a/style.css
+++ b/style.css
@@ -582,16 +582,7 @@ footer .copyright .copyright-statement {
 	}
 
 	.main-content-container .main-content-button button {
-		width: 300px;
-		height: 100px;
-		top: 500px;
-		font-size: 28px;
-		border: none;
-		font-family: HindRegular, sans-serif;
-		margin: 0 auto;
-		position: absolute;
-		transition: 0.25s;
-		cursor: pointer;
+		width: calc(100% - 15px * 2);
 	}
 
 	.project .project-header h3 {
